Fix gap between book cards

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ main {
 .books {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
+  gap: 1.5rem;
   padding: 2rem;
 }
 
@@ -142,7 +142,7 @@ main {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 2fr 1fr 1fr;
   justify-items: end;
-  padding: 0.8rem;
+  padding: 0.5rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
